exports[`padding properly applies a value when passed only one 1`] = `
Object {
  "paddingBottom": "12px",
  "paddingLeft": "12px",
  "paddingRight": "12px",
  "paddingTop": "12px",
}
`;

exports[`padding properly applies unitless values 1`] = `
Object {
  "padding-bottom": 36,
  "padding-left": 48,
  "padding-right": 24,
  "padding-top": 12,
}
`;

exports[`padding properly applies unitless zero 1`] = `
Object {
  "padding-bottom": 0,
  "padding-left": 0,
  "padding-right": 0,
  "padding-top": 0,
}
`;

exports[`padding properly applies values when passed four 1`] = `
Object {
  "paddingBottom": "36px",
  "paddingLeft": "48px",
  "paddingRight": "24px",
  "paddingTop": "12px",
}
`;

exports[`padding properly applies values when passed three 1`] = `
Object {
  "paddingBottom": "36px",
  "paddingLeft": "24px",
  "paddingRight": "24px",
  "paddingTop": "12px",
}
`;

exports[`padding properly applies values when passed two 1`] = `
Object {
  "paddingBottom": "12px",
  "paddingLeft": "24px",
  "paddingRight": "24px",
  "paddingTop": "12px",
}
`;
